--- a/build-dev/client/index.html
+++ b/build-dev/client/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-    <title>THOT BE GONE</title>
+    <title>What We Really Want</title>
 </head>
 <body>
 <noscript>
