Mobile responsive for index and room components

--- a/build-dev/client/index.html
+++ b/build-dev/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="mobile-web-app-capable" content="yes">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
     <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -16,6 +17,8 @@
     <strong>JavaScript has been disabled on your browser</strong>,
     please <strong>enable JS</strong> to make this app work.
 </noscript>
-<div id="app"></div>
+
+    <div id="app"></div>
+
 <script type="text/javascript" src="/vendor.js"></script><script type="text/javascript" src="/main.js"></script></body>
 </html>
